--- a/org.sirius.backend.core/pom.xml
+++ b/org.sirius.backend.core/pom.xml
@@ -1,25 +1,37 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.sirius</groupId>
+  <artifactId>org.sirius.backend.core</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+
+<parent>
+  <groupId>org.sirius</groupId>
   <artifactId>parent</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
+</parent>
+
+  <packaging>jar</packaging>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
-<modules>
-    <module>org.sirius.common</module>
-    <module>org.sirius.frontend</module>
-    <module>org.sirius.compiler</module>
-    <module>org.sirius.backend.core</module>
-    <module>org.sirius.backend.jvm</module>
-</modules>
-
   <dependencies>
+   	<dependency>
+	    <groupId>org.sirius</groupId>
+	    <artifactId>org.sirius.common</artifactId>
+	    <version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  
+  	<dependency>
+	    <groupId>org.sirius</groupId>
+	    <artifactId>org.sirius.frontend</artifactId>
+	    <version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  
   </dependencies>
+  
   <build>
     <plugins>
       <plugin>
