--- a/org.sirius.compiler/pom.xml
+++ b/org.sirius.compiler/pom.xml
@@ -4,43 +4,154 @@
   <artifactId>org.sirius.compiler</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
-<parent>
-  <groupId>org.sirius</groupId>
-  <artifactId>parent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-</parent>
+  <parent>
+    <groupId>org.sirius</groupId>
+    <artifactId>parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
 
   <packaging>jar</packaging>
 
-  <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
+	<properties>
+		<build.package.lib>${project.build.directory}/lib</build.package.lib>
+	</properties>
 
+  <build>
+    <plugins>
+    
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.1.2</version>
+        <configuration>
+          <archive>
+            <index>true</index>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <!-- <classpathLayoutType>repository</classpathLayoutType> -->
+              <mainClass>org.sirius.compiler.core.Main</mainClass>
+            </manifest>
+            <manifestEntries>
+              <mode>development</mode>
+              <url>${project.url}</url>
+              <key>value</key>
+            </manifestEntries>
+          </archive>
+        </configuration>
+        
+      </plugin>
+      
+      
+      
+      
+      
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>3.1.1</version>
+        <executions>
+          <execution>
+            <id>copy</id>
+            <phase>package</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <artifactItems>
+          
+            <artifactItem>
+              <groupId>org.sirius</groupId>
+              <artifactId>org.sirius.common</artifactId>
+              <version>0.0.1-SNAPSHOT</version>
+              <type>jar</type>
+              <overWrite>false</overWrite>
+              <outputDirectory>${build.package.lib}</outputDirectory>
+              <!-- <destFileName>optional-new-name.jar</destFileName> -->
+            </artifactItem>
+            
+            <artifactItem>
+              <groupId>org.sirius</groupId>
+              <artifactId>org.sirius.compiler</artifactId>
+              <version>0.0.1-SNAPSHOT</version>
+              <type>jar</type>
+              <overWrite>false</overWrite>
+              <outputDirectory>${build.package.lib}</outputDirectory>
+              <!-- <destFileName>optional-new-name.jar</destFileName> -->
+            </artifactItem>
+            
+            <artifactItem>
+              <groupId>org.sirius</groupId>
+              <artifactId>org.sirius.frontend</artifactId>
+              <version>0.0.1-SNAPSHOT</version>
+              <type>jar</type>
+              <overWrite>false</overWrite>
+              <outputDirectory>${build.package.lib}</outputDirectory>
+              <!-- <destFileName>optional-new-name.jar</destFileName> -->
+            </artifactItem>
+            
+            <artifactItem>
+              <groupId>org.sirius</groupId>
+              <artifactId>org.sirius.backend.core</artifactId>
+              <version>0.0.1-SNAPSHOT</version>
+              <type>jar</type>
+              <overWrite>false</overWrite>
+              <outputDirectory>${build.package.lib}</outputDirectory>
+              <!-- <destFileName>optional-new-name.jar</destFileName> -->
+            </artifactItem>
+            
+            <artifactItem>
+              <groupId>org.sirius</groupId>
+              <artifactId>org.sirius.backend.jvm</artifactId>
+              <version>0.0.1-SNAPSHOT</version>
+              <type>jar</type>
+              <overWrite>false</overWrite>
+              <outputDirectory>${build.package.lib}</outputDirectory>
+              <!-- <destFileName>optional-new-name.jar</destFileName> -->
+            </artifactItem>
+            
+            
+            
+          </artifactItems>
+          <outputDirectory>${project.build.directory}/wars</outputDirectory>
+          <overWriteReleases>false</overWriteReleases>
+          <overWriteSnapshots>true</overWriteSnapshots>
+        </configuration>
+      </plugin>
+      
+      
+      
+    </plugins>
+  </build>
+  
   <dependencies>
   	<dependency>
 	    <groupId>org.sirius</groupId>
 	    <artifactId>org.sirius.common</artifactId>
-	    <version>0.0.1-SNAPSHOT</version>
   	</dependency>
   
   	<dependency>
 	    <groupId>org.sirius</groupId>
 	    <artifactId>org.sirius.frontend</artifactId>
-	    <version>0.0.1-SNAPSHOT</version>
   	</dependency>
   
   	<dependency>
 	    <groupId>org.sirius</groupId>
 	    <artifactId>org.sirius.backend.core</artifactId>
-	    <version>0.0.1-SNAPSHOT</version>
   	</dependency>
   
   	<dependency>
 	    <groupId>org.sirius</groupId>
 	    <artifactId>org.sirius.backend.jvm</artifactId>
-	    <version>0.0.1-SNAPSHOT</version>
   	</dependency>
   
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>6.14.3</version>
+      <scope>test</scope>
+    </dependency>
+    
   </dependencies>
 </project>
