--- a/org.sirius.frontend/pom.xml
+++ b/org.sirius.frontend/pom.xml
@@ -1,27 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.sirius</groupId>
   <artifactId>org.sirius.frontend</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
   
-<parent>
-  <groupId>org.sirius</groupId>
-  <artifactId>parent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-</parent>
+  <parent>
+    <groupId>org.sirius</groupId>
+    <artifactId>parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
         
-        
-  <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
 
   <dependencies>
   
     <dependency>
       <groupId>org.sirius</groupId>
       <artifactId>org.sirius.common</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
     </dependency>
   
   <!-- https://mvnrepository.com/artifact/org.testng/testng -->
@@ -29,7 +22,7 @@
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
     <version>6.14.3</version>
-    <!--  <scope>test</scope>  -->
+    <scope>test</scope>
   </dependency>
     
     <dependency>
@@ -83,16 +76,6 @@
     
     <plugins>
     
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
-        <configuration>
-          <source>11</source>
-          <target>11</target>
-          <compilerVersion>11</compilerVersion>
-          <!--<release>11</release>-->
-        </configuration>
-      </plugin>
       
           <!-- To use the plugin goals in your POM or parent POM -->
           <!-- To print AntLR4 plugin parameters:
