--- a/org.sirius.compiler/pom.xml
+++ b/org.sirius.compiler/pom.xml
@@ -17,6 +17,13 @@
 	</properties>
 
   <build>
+  	<resources>
+  		<resource>
+  			<directory>src/main/resources</directory>
+  			<filtering>true</filtering>
+  		</resource>
+  	</resources>
+  
     <plugins>
     
       <plugin>
@@ -40,9 +47,18 @@
         </configuration>
         
       </plugin>
+
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-resources-plugin</artifactId>
+		<version>2.3</version>
+		<configuration>
+			<!-- specify UTF-8, ISO-8859-1 or any other file encoding -->
+			<encoding>UTF-8</encoding>
+		</configuration>
+	</plugin>
       
-      
-      
+    
       
       
       <plugin>
