--- a/org.sirius.backend.jvm/pom.xml
+++ b/org.sirius.backend.jvm/pom.xml
@@ -28,5 +28,19 @@
 	    <artifactId>org.sirius.backend.core</artifactId>
   	</dependency>
   
+      <!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
+	<dependency>
+	    <groupId>org.ow2.asm</groupId>
+	    <artifactId>asm</artifactId>
+	    <version>7.1</version>
+	</dependency>
+
+   <dependency>
+     <groupId>org.testng</groupId>
+     <artifactId>testng</artifactId>
+     <version>6.14.3</version>
+     <scope>test</scope>
+   </dependency>
+  
   </dependencies>
 </project>
