--- a/org.sirius.frontend/pom.xml
+++ b/org.sirius.frontend/pom.xml
@@ -16,12 +16,16 @@
       <groupId>org.sirius</groupId>
       <artifactId>org.sirius.common</artifactId>
     </dependency>
+    
+    <dependency>
+      <groupId>org.sirius</groupId>
+      <artifactId>org.sirius.sdk</artifactId>
+    </dependency>
   
   <!-- https://mvnrepository.com/artifact/org.testng/testng -->
   <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
-    <version>6.14.3</version>
     <scope>test</scope>
   </dependency>
     
