--- a/org.sirius.backend.jvm/pom.xml
+++ b/org.sirius.backend.jvm/pom.xml
@@ -12,6 +12,10 @@
 
   <packaging>jar</packaging>
 
+  <properties>
+  	<version.asm>7.3.1</version.asm>
+  </properties>
+  
   <dependencies>
   	<dependency>
 	    <groupId>org.sirius</groupId>
@@ -32,7 +36,13 @@
 	<dependency>
 	    <groupId>org.ow2.asm</groupId>
 	    <artifactId>asm</artifactId>
-	    <version>7.1</version>
+	    <version>${version.asm}</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.ow2.asm</groupId>
+	    <artifactId>asm-util</artifactId>
+	    <version>${version.asm}</version>
+	    <scope>test</scope>
 	</dependency>
 
    <dependency>
