--- a/org.sirius.compiler/pom.xml
+++ b/org.sirius.compiler/pom.xml
@@ -81,7 +81,7 @@
             <artifactItem>
               <groupId>org.antlr</groupId>
               <artifactId>antlr4-runtime</artifactId>
-              <version>4.7.2</version>
+              <version>4.8-1</version>
               <type>jar</type>
               <overWrite>false</overWrite>
               <outputDirectory>${dist.lib}</outputDirectory>
