--- a/org.sirius.compiler/pom.xml
+++ b/org.sirius.compiler/pom.xml
@@ -156,6 +156,16 @@
               <!-- <destFileName>backend.jvm.jar</destFileName> -->
             </artifactItem>
             
+            <artifactItem>
+              <groupId>org.sirius</groupId>
+              <artifactId>org.sirius.runtime</artifactId>
+              <version>${sirius.version}</version>
+              <type>jar</type>
+              <overWrite>false</overWrite>
+              <outputDirectory>${dist.lib}</outputDirectory>
+              <!-- <destFileName>backend.jvm.jar</destFileName> -->
+            </artifactItem>
+            
             
             
             
@@ -192,10 +202,15 @@
 	    <artifactId>org.sirius.backend.jvm</artifactId>
   	</dependency>
   
+  	<dependency>
+	    <groupId>org.sirius</groupId>
+	    <artifactId>org.sirius.runtime</artifactId>
+  	</dependency>
+  
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
-      <version>6.14.3</version>
+      <!-- <version>6.14.3</version>  -->
       <scope>test</scope>
     </dependency>
     
