Made AstFunctionDeclaration and AstClassDeclaration a little more immutable

--- a/org.sirius.frontend/pom.xml
+++ b/org.sirius.frontend/pom.xml
@@ -47,6 +47,12 @@
 	    <version>7.1</version>
 	</dependency>
 	    
+	<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+	<dependency>
+	    <groupId>com.google.guava</groupId>
+	    <artifactId>guava</artifactId>
+	</dependency>
+	    
   </dependencies>
   
   <build>
