--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
 		    <scope>test</scope>
 		</dependency>
 
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>29.0-jre</version>
+		</dependency>
+
 	</dependencies>
   </dependencyManagement>
   
