--- a/pom.xml
+++ b/pom.xml
@@ -88,13 +88,56 @@
 		    <version>29.0-jre</version>
 		</dependency>
 
+	    <dependency>
+	        <groupId>org.junit.jupiter</groupId>
+	        <artifactId>junit-jupiter-engine</artifactId>
+	        <version>5.6.2</version>
+	        <scope>test</scope>
+	    </dependency>
+	    
+		<dependency>
+    		<groupId>org.mockito</groupId>
+    		<artifactId>mockito-core</artifactId>
+    		<version>3.3.3</version>
+    		<scope>test</scope>
+  		</dependency>
+    
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-junit-jupiter</artifactId>
+		    <version>3.3.3</version>
+		    <scope>test</scope>
+		</dependency>
+		    
+    
+    
+		<dependency>
+			<groupId>com.github.testng-team</groupId>
+			<artifactId>testng-junit5</artifactId>
+			<version>0.0.1</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.junit.platform</groupId>
+					<artifactId>junit-platform-engine</artifactId>
+				</exclusion>
+			</exclusions>
+	    </dependency>
+	    
+	    
 	</dependencies>
   </dependencyManagement>
   
   <dependencies>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+    </dependency>
   </dependencies>
+  
   <build>
     <plugins>
+    
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
@@ -109,6 +152,7 @@
           
         </configuration>
       </plugin>
+      
     </plugins>
   </build>
 </project>
