--- a/org.sirius.frontend/pom.xml
+++ b/org.sirius.frontend/pom.xml
@@ -30,8 +30,7 @@
 	</dependency>
 	
 	
-	<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
-	<dependency>
+<!-- 	<dependency>
 		<groupId>org.mockito</groupId>
 		<artifactId>mockito-core</artifactId>
 		<scope>test</scope>
@@ -43,7 +42,8 @@
 		<scope>test</scope>
 	</dependency>
     
-    <dependency>
+ -->
+     <dependency>
       <groupId>org.antlr</groupId>
       <artifactId>antlr4-runtime</artifactId>
       <version>4.8-1</version>
@@ -123,7 +123,8 @@
         	<sourceDirectory>src/main/antlr</sourceDirectory>
         </configuration>
       </plugin>
-      
+
+	
     </plugins>
   </build>
 </project>
