--- a/org.sirius.frontend/pom.xml
+++ b/org.sirius.frontend/pom.xml
@@ -29,8 +29,17 @@
 		<scope>test</scope>
 	</dependency>
 	
-	
-<!-- 	<dependency>
+	<dependency>
+		<groupId>org.junit.jupiter</groupId>
+		<artifactId>junit-jupiter-api</artifactId>
+		<version>5.6.2</version>
+	</dependency>
+	<dependency>
+		<groupId>org.junit.jupiter</groupId>
+		<artifactId>junit-jupiter-params</artifactId>
+		<version>5.6.2</version>
+	</dependency>
+ 	<dependency>
 		<groupId>org.mockito</groupId>
 		<artifactId>mockito-core</artifactId>
 		<scope>test</scope>
@@ -41,8 +50,13 @@
 		<artifactId>mockito-junit-jupiter</artifactId>
 		<scope>test</scope>
 	</dependency>
+	<dependency>
+		<groupId>org.hamcrest</groupId>
+		<artifactId>hamcrest</artifactId>
+		<scope>test</scope>
+	</dependency>
     
- -->
+
      <dependency>
       <groupId>org.antlr</groupId>
       <artifactId>antlr4-runtime</artifactId>
@@ -121,6 +135,7 @@
         	<outputDirectory>build/generated-source/antlr/org/sirius/frontend/parser</outputDirectory>
         	 <!-- <outputDirectory>build/generated-source/antlr</outputDirectory> -->
         	<sourceDirectory>src/main/antlr</sourceDirectory>
+        	<visitor>true</visitor>
         </configuration>
       </plugin>
 
