--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,13 @@
 	        <scope>test</scope>
 	    </dependency>
 	    
+	    <dependency>
+	        <groupId>org.junit.jupiter</groupId>
+	        <artifactId>junit-jupiter-api</artifactId>
+	        <version>5.6.2</version>
+	        <scope>test</scope>
+	    </dependency>
+	    
 		<dependency>
     		<groupId>org.mockito</groupId>
     		<artifactId>mockito-core</artifactId>
@@ -109,7 +116,13 @@
 		    <scope>test</scope>
 		</dependency>
 		    
-    
+	    <dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
+			<version>2.2</version>
+			<scope>test</scope>
+		</dependency>
+	    
     
 <!-- 		<dependency>
 			<groupId>com.github.testng-team</groupId>
@@ -133,6 +146,10 @@
   		<groupId>org.junit.jupiter</groupId>
   		<artifactId>junit-jupiter-engine</artifactId>
   	</dependency>
+  	<dependency>
+  		<groupId>org.junit.jupiter</groupId>
+  		<artifactId>junit-jupiter-api</artifactId>
+  	</dependency>
   </dependencies>
   
   <build>
@@ -151,15 +168,25 @@
 
 			</configuration>
 		</plugin>
-		
+
 		<plugin>
 			<artifactId>maven-surefire-plugin</artifactId>
 			<version>3.0.0-M5</version>
 			<!-- <version>2.12.4</version> -->
-			
+	
 			<configuration>
 				<argLine>-Xmx1024m</argLine>
 			</configuration>
+			
+			<dependencies>
+				<dependency>
+					<groupId>org.apache.maven.surefire</groupId>
+					<artifactId>surefire-testng</artifactId>
+					<version>3.0.0-M5</version>
+				</dependency>
+			</dependencies>
+			
+
 		</plugin>
   	</plugins>
   </build>
