Removed references to testng

--- a/org.sirius.compiler/pom.xml
+++ b/org.sirius.compiler/pom.xml
@@ -214,12 +214,25 @@
 	    <artifactId>org.sirius.runtime</artifactId>
   	</dependency>
   
+   	<dependency>
+		<groupId>org.junit.jupiter</groupId>
+		<artifactId>junit-jupiter-api</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.junit.jupiter</groupId>
+		<artifactId>junit-jupiter-params</artifactId>
+	</dependency>
     <dependency>
+		<groupId>org.hamcrest</groupId>
+		<artifactId>hamcrest</artifactId>
+		<scope>test</scope>
+	</dependency>
+  
+<!--     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
-      <!-- <version>6.14.3</version>  -->
       <scope>test</scope>
     </dependency>
-    
+ -->    
   </dependencies>
 </project>
