--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <sirius.version>0.0.1-SNAPSHOT</sirius.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    
+<!--    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>-->
+    <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+    <junit-jupiter.version>5.6.2</junit-jupiter.version>
+    
   </properties>
 
   <modules>
@@ -75,13 +80,13 @@
 
   
 
-		<dependency>
+<!-- 		<dependency>
 		    <groupId>org.testng</groupId>
 		    <artifactId>testng</artifactId>
 		    <version>7.1.0</version>
 		    <scope>test</scope>
 		</dependency>
-
+ -->
 		<dependency>
 		    <groupId>com.google.guava</groupId>
 		    <artifactId>guava</artifactId>
@@ -91,14 +96,21 @@
 	    <dependency>
 	        <groupId>org.junit.jupiter</groupId>
 	        <artifactId>junit-jupiter-engine</artifactId>
-	        <version>5.6.2</version>
+	        <version>${junit-jupiter.version}</version>
 	        <scope>test</scope>
 	    </dependency>
 	    
 	    <dependency>
 	        <groupId>org.junit.jupiter</groupId>
 	        <artifactId>junit-jupiter-api</artifactId>
-	        <version>5.6.2</version>
+	        <version>${junit-jupiter.version}</version>
+	        <scope>test</scope>
+	    </dependency>
+	    
+	    <dependency>
+	        <groupId>org.junit.jupiter</groupId>
+	        <artifactId>junit-jupiter-params</artifactId>
+	        <version>${junit-jupiter.version}</version>
 	        <scope>test</scope>
 	    </dependency>
 	    
@@ -150,6 +162,12 @@
   		<groupId>org.junit.jupiter</groupId>
   		<artifactId>junit-jupiter-api</artifactId>
   	</dependency>
+  	<dependency>
+		<groupId>org.junit.jupiter</groupId>
+		<artifactId>junit-jupiter</artifactId>
+		<version>${junit-jupiter.version}</version>
+		<scope>test</scope>
+	</dependency>
   </dependencies>
   
   <build>
@@ -170,22 +188,24 @@
 		</plugin>
 
 		<plugin>
+		 	<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-surefire-plugin</artifactId>
-			<version>3.0.0-M5</version>
+			<version>${maven-surefire-plugin.version}</version>
 			<!-- <version>2.12.4</version> -->
 	
 			<configuration>
 				<argLine>-Xmx1024m</argLine>
 			</configuration>
-			
+			<!-- 
 			<dependencies>
 				<dependency>
 					<groupId>org.apache.maven.surefire</groupId>
 					<artifactId>surefire-testng</artifactId>
-					<version>3.0.0-M5</version>
+					<version>${maven-surefire-plugin.version}</version>
 				</dependency>
+                
 			</dependencies>
-			
+			 -->
 
 		</plugin>
   	</plugins>
