--- a/org.sirius.frontend/pom.xml
+++ b/org.sirius.frontend/pom.xml
@@ -63,7 +63,7 @@
      <dependency>
       <groupId>org.antlr</groupId>
       <artifactId>antlr4-runtime</artifactId>
-      <version>4.8-1</version>
+      <version>4.9.1</version>
     </dependency>
     <dependency>
       <groupId>org.yaml</groupId>
@@ -94,7 +94,7 @@
         <plugin>
           <groupId>org.antlr</groupId>
           <artifactId>antlr4-maven-plugin</artifactId>
-          <version>4.8-1</version>
+          <version>4.9.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
