--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,10 @@
   <packaging>pom</packaging>
 
   <properties>
-    <maven.compiler.source>15</maven.compiler.source>
-    <maven.compiler.target>15</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.compilerVersion>11</maven.compiler.compilerVersion>
+    
     <sirius.version>0.0.1-SNAPSHOT</sirius.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     
@@ -176,9 +178,10 @@
 			<artifactId>maven-compiler-plugin</artifactId>
 			<version>3.8.1</version>
 			<configuration>
-				<source>15</source>
-				<target>15</target>
-				<compilerVersion>15</compilerVersion>
+				<source>${maven.compiler.source}</source>
+				<target>${maven.compiler.target}</target>
+				<compilerVersion>${maven.compiler.compilerVersion}15</compilerVersion>
+				
 				<compilerArgs>
 					<arg>-parameters</arg>
 				</compilerArgs>
