--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,41 @@
 	          <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-site-plugin</artifactId>
               <version>3.9.1</version>
+              <configuration>
+		        <asciidoc>
+		            <templateDirs>
+		                <dir>src/site/asciidoc/templates</dir>
+		            </templateDirs>
+		            <requires>
+		            	<!-- Tried:
+		            	sudo apt install ruby
+		            	sudo gem install asciidoctor-diagram
+		            	
+		            	 -->
+		            	<require>asciidoctor-diagram</require>
+		                <!-- <require>asciidoctor-diagram</require> -->
+		            </requires>
+		            <attributes>
+		                <source-highlighter>coderay</source-highlighter>
+		                <coderay-css>style</coderay-css>
+		            </attributes>
+		        </asciidoc>
+		      </configuration>
+              <dependencies>
+              
+                 <dependency>
+                    <groupId>org.asciidoctor</groupId>
+                    <artifactId>asciidoctor-maven-plugin</artifactId>
+                    <version>2.1.0</version>
+                </dependency>
+                
+                <dependency>
+		            <groupId>org.asciidoctor</groupId>
+		            <artifactId>asciidoctorj-diagram</artifactId>
+		            <version>2.1.0</version>
+		        </dependency>
+
+               </dependencies>
   			</plugin>
 			<plugin>
 			  <groupId>org.apache.maven.plugins</groupId>
@@ -206,6 +241,7 @@
         	</plugin>
         </plugins>
   	</pluginManagement>
+  	
   	<plugins>
   	<plugin>
 		<artifactId>maven-compiler-plugin</artifactId>
@@ -244,6 +280,56 @@
 			 -->
 
 		</plugin>
+
+ 		<plugin>
+			<groupId>org.asciidoctor</groupId>
+			<artifactId>asciidoctor-maven-plugin</artifactId>
+			<version>2.1.0</version>
+     		<configuration>
+     		</configuration>
+     		<executions>
+     			<execution>
+     				<!-- <id>generate-html-doc</id> -->
+     				<id>generate-html-doc</id>
+     				<phase>generate-resources</phase>
+     				<goals>
+     					<goal>process-asciidoc</goal>
+     				</goals>
+     				<configuration>
+      					<backend>html5</backend>   
+     					<!-- <backend>pdf</backend> -->
+     					<outputDirectory>target/site/mydocs</outputDirectory>
+     					
+     					
+<!--      					<requires>
+     						<require>asciidoctor-diagram</require>
+     					</requires>
+ -->     					
+     					<attributes>
+<!--      					   <toc>left</toc>
+     					   <icons>font</icons>
+     					   <sectanchors>true</sectanchors>
+     					   <idprefix/>
+     					   <idseparator>-</idseparator>                                
+     					   
+     					   <imagesdir>${project.build.directory}/generated-docs2/images</imagesdir>                                 
+     					   <imagesoutdir>${project.build.directory}/generated-docs3/images-jpp</imagesoutdir>
+ -->
+			                <source-highlighter>coderay</source-highlighter>
+			                <coderay-css>style</coderay-css>
+      					</attributes>
+     				</configuration>
+     			</execution>
+     		</executions>
+		</plugin>
+
+		 <!-- 
+		<plugin>
+           <groupId>org.asciidoctor</groupId>
+           <artifactId>asciidoctorj-diagram</artifactId>
+           <version>2.1.0</version>
+		</plugin>
+		 -->
   	</plugins>
   </build>
 </project>
