--- a/pom.xml
+++ b/pom.xml
@@ -203,20 +203,11 @@
 		            <templateDirs>
 		                <dir>src/site/asciidoc/templates</dir>
 		            </templateDirs>
-		            <requires>
-		            	<!-- Tried:
-		            	sudo apt install ruby
-		            	sudo gem install asciidoctor-diagram
-		            	
-		            	 -->
-		            	<require>asciidoctor-diagram</require>
-		                <!-- <require>asciidoctor-diagram</require> -->
-		            </requires>
-		            <attributes>
+<!-- 		            <attributes>
 		                <source-highlighter>coderay</source-highlighter>
 		                <coderay-css>style</coderay-css>
 		            </attributes>
-		        </asciidoc>
+ -->		        </asciidoc>
 		      </configuration>
               <dependencies>
               
@@ -281,15 +272,35 @@
 
 		</plugin>
 
- 		<plugin>
+  		<plugin>
 			<groupId>org.asciidoctor</groupId>
 			<artifactId>asciidoctor-maven-plugin</artifactId>
 			<version>2.1.0</version>
+ 			
      		<configuration>
+     			<requires>
+     			       	<!-- Tried:
+		            	sudo apt install ruby
+		            	sudo gem install asciidoctor-diagram
+		            	 -->
+     				<require>asciidoctor-diagram</require>
+     			</requires>
      		</configuration>
+     		<dependencies>
+                 <dependency>
+                    <groupId>org.asciidoctor</groupId>
+                    <artifactId>asciidoctor-maven-plugin</artifactId>
+                    <version>2.1.0</version>
+                </dependency>
+                
+                <dependency>
+		            <groupId>org.asciidoctor</groupId>
+		            <artifactId>asciidoctorj-diagram</artifactId>
+		            <version>2.1.0</version>
+		        </dependency>
+     		</dependencies>
      		<executions>
      			<execution>
-     				<!-- <id>generate-html-doc</id> -->
      				<id>generate-html-doc</id>
      				<phase>generate-resources</phase>
      				<goals>
@@ -297,39 +308,23 @@
      				</goals>
      				<configuration>
       					<backend>html5</backend>   
-     					<!-- <backend>pdf</backend> -->
+     
      					<outputDirectory>target/site/mydocs</outputDirectory>
-     					
-     					
-<!--      					<requires>
-     						<require>asciidoctor-diagram</require>
-     					</requires>
- -->     					
      					<attributes>
-<!--      					   <toc>left</toc>
-     					   <icons>font</icons>
-     					   <sectanchors>true</sectanchors>
-     					   <idprefix/>
-     					   <idseparator>-</idseparator>                                
-     					   
-     					   <imagesdir>${project.build.directory}/generated-docs2/images</imagesdir>                                 
-     					   <imagesoutdir>${project.build.directory}/generated-docs3/images-jpp</imagesoutdir>
- -->
 			                <source-highlighter>coderay</source-highlighter>
 			                <coderay-css>style</coderay-css>
       					</attributes>
      				</configuration>
      			</execution>
      		</executions>
+     		
 		</plugin>
 
-		 <!-- 
 		<plugin>
-           <groupId>org.asciidoctor</groupId>
-           <artifactId>asciidoctorj-diagram</artifactId>
-           <version>2.1.0</version>
-		</plugin>
-		 -->
+        	<groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-site-plugin</artifactId>
+        </plugin>
+	
   	</plugins>
   </build>
 </project>
