--- a/pom.xml
+++ b/pom.xml
@@ -303,6 +303,7 @@
         <version>3.2.0</version>
         <configuration>
           <doclint>none</doclint> <!-- Temp, ignore (numerous) missing docs -->
+          <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
         </configuration>
         <reportSets>
           <reportSet>
