--- a/org.sirius.backend.jvm/pom.xml
+++ b/org.sirius.backend.jvm/pom.xml
@@ -35,6 +35,12 @@
 	    <artifactId>org.sirius.sdk</artifactId>
   	</dependency>
   
+  	<dependency>
+	    <groupId>org.sirius</groupId>
+	    <artifactId>org.sirius.runtime</artifactId>
+<!-- 	    <scope>test</scope> -->
+  	</dependency>
+  
       <!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
 	<dependency>
 	    <groupId>org.ow2.asm</groupId>
