--- a/org.sirius.backend.jvm/pom.xml
+++ b/org.sirius.backend.jvm/pom.xml
@@ -11,7 +11,8 @@
   <packaging>jar</packaging>
 
   <properties>
-  	<version.asm>7.3.1</version.asm>
+<!--   	<version.asm>7.3.1</version.asm> -->
+  	<version.asm>9.1</version.asm>
   </properties>
   
   <dependencies>
