Removed dependency on guava

--- a/pom.xml
+++ b/pom.xml
@@ -97,12 +97,12 @@
 			<version>${sirius.version}</version>
 		</dependency>
 
-		<dependency>
+<!-- 		<dependency>
 		    <groupId>com.google.guava</groupId>
 		    <artifactId>guava</artifactId>
 		    <version>29.0-jre</version>
 		</dependency>
-
+ -->
 	    <dependency>
 	        <groupId>org.junit.jupiter</groupId>
 	        <artifactId>junit-jupiter-engine</artifactId>
