--- a/org.sirius.backend.jvm/pom.xml
+++ b/org.sirius.backend.jvm/pom.xml
@@ -12,7 +12,7 @@
 
   <properties>
 <!--   	<version.asm>7.3.1</version.asm> -->
-  	<version.asm>9.1</version.asm>
+ <!--  	<version.asm>9.1</version.asm> -->
   </properties>
   
   <dependencies>
@@ -46,12 +46,12 @@
 	<dependency>
 	    <groupId>org.ow2.asm</groupId>
 	    <artifactId>asm</artifactId>
-	    <version>${version.asm}</version>
+	    <version>${libs.asm.version}</version>
 	</dependency>
 	<dependency>
 	    <groupId>org.ow2.asm</groupId>
 	    <artifactId>asm-util</artifactId>
-	    <version>${version.asm}</version>
+	    <version>${libs.asm.version}</version>
 	    <scope>test</scope>
 	</dependency>
 
