Removed frontend dependency on snakeyaml (unused and caused safety issues)

--- a/org.sirius.frontend/pom.xml
+++ b/org.sirius.frontend/pom.xml
@@ -65,12 +65,12 @@
       <artifactId>antlr4-runtime</artifactId>
       <version>${libs.antlr4.version}</version>
     </dependency>
-    <dependency>
+<!--     <dependency>
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
       <version>1.17</version>
     </dependency>
-    
+ -->    
     <!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
 	<dependency>
 	    <groupId>org.ow2.asm</groupId>
