--- a/org.sirius.compiler/pom.xml
+++ b/org.sirius.compiler/pom.xml
@@ -222,6 +222,15 @@
 		<groupId>org.junit.jupiter</groupId>
 		<artifactId>junit-jupiter-params</artifactId>
 	</dependency>
+	<dependency>
+		<groupId>org.mockito</groupId>
+		<artifactId>mockito-core</artifactId>
+	</dependency>
+	<dependency>
+		<groupId>org.mockito</groupId>
+		<artifactId>mockito-junit-jupiter</artifactId>
+	</dependency>
+	
     <dependency>
 		<groupId>org.hamcrest</groupId>
 		<artifactId>hamcrest</artifactId>
