Large grammar refactoring (no functional change)

--- a/org.sirius.frontend/pom.xml
+++ b/org.sirius.frontend/pom.xml
@@ -120,6 +120,11 @@
         	
 <!--         	<sourceDirectory>src/main/antlr/org/sirius/frontend/parser</sourceDirectory> -->
         	<sourceDirectory>src/main/antlr</sourceDirectory>
+<!--        	<libDirectory>src/main/antlr/imports</libDirectory>-->
+        	<libDirectory>src/main/antlr</libDirectory>
+        	
+<!--        	<libDirectory>src/main/antlr</libDirectory>-->
+    
         	<visitor>true</visitor>
         </configuration>
       </plugin>
