--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,8 @@
     
 <!--    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>-->
     <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
-    <junit-jupiter.version>5.6.2</junit-jupiter.version>
+<!--    <junit-jupiter.version>5.9.1</junit-jupiter.version> -->
+    <junit-jupiter.version>5.8.1</junit-jupiter.version>
     
     <additionalparam>-Xdoclint:none</additionalparam>
     
@@ -143,7 +144,7 @@
 	    
 	</dependencies>
   </dependencyManagement>
-  
+<!--  
   <dependencies>
   	<dependency>
   		<groupId>org.junit.jupiter</groupId>
@@ -153,14 +154,9 @@
   		<groupId>org.junit.jupiter</groupId>
   		<artifactId>junit-jupiter-api</artifactId>
   	</dependency>
-  	<dependency>
-		<groupId>org.junit.jupiter</groupId>
-		<artifactId>junit-jupiter</artifactId>
-		<version>${junit-jupiter.version}</version>
-		<scope>test</scope>
-	</dependency>
+	
   </dependencies>
-  
+-->  
   <distributionManagement>
   	<site>
   		<id>staging</id>
